--- a/reading-service-bluemix.properties
+++ b/reading-service-bluemix.properties
@@ -1,6 +1,7 @@
-message = Hello Jerry2
-management.security.enabled=false
+message = Hello Reading Jerry2
+hystrix.stream.endpoint.enabled=true
 eureka.client.serviceUrl.defaultZone=https://cdi-eureka-server.ibm-gts.us-south.mybluemix.net/eureka/
 eureka.instance.hostname=${vcap.application.application_uris[0]}
+management.security.enabled=false
 
 
