--- a/book-recommend-service-local.properties
+++ b/book-recommend-service-local.properties
@@ -1,4 +1,4 @@
-message = Hello Jerry2
+message = Hello Jerry
 management.security.enabled=false
 eureka.client.serviceUrl.defaultZone=http://9.186.50.36:8761/eureka/
 logging.level.org.springframework=DEBUG
