--- a/reading-service-local.properties
+++ b/reading-service-local.properties
@@ -1,3 +1,4 @@
+server.port=8091
 message = Hello Reading Jerry2222
 hystrix.stream.endpoint.enabled=true
 eureka.client.serviceUrl.defaultZone=http://9.186.50.36:8761/eureka/
