--- a/reading-service-local.properties
+++ b/reading-service-local.properties
@@ -3,5 +3,6 @@ message = Hello Reading Jerry2222
 hystrix.stream.endpoint.enabled=true
 eureka.client.serviceUrl.defaultZone=http://9.186.50.36:8761/eureka/
 logging.level.org.springframework=DEBUG
+protocol=http
 
 
