--- a/reading-service-bluemix.properties
+++ b/reading-service-bluemix.properties
@@ -3,5 +3,5 @@ hystrix.stream.endpoint.enabled=true
 eureka.client.serviceUrl.defaultZone=https://cdi-eureka-server.ibm-gts.us-south.mybluemix.net/eureka/
 eureka.instance.hostname=${vcap.application.application_uris[0]}
 management.security.enabled=false
-
+protocol=https
 
