--- a/reading-service-bluemix.properties
+++ b/reading-service-bluemix.properties
@@ -4,4 +4,6 @@ eureka.client.serviceUrl.defaultZone=https://cdi-eureka-server.ibm-gts.us-south.
 eureka.instance.hostname=${vcap.application.application_uris[0]}
 management.security.enabled=false
 protocol=https
+eureka.instance.securePortEnabled=true
+eureka.instance.securePort=443
 
