--- a/book-recommend-service-bluemix.properties
+++ b/book-recommend-service-bluemix.properties
@@ -2,5 +2,6 @@ message = Hello Tom
 management.security.enabled=false
 eureka.client.serviceUrl.defaultZone=https://cdi-eureka-server.ibm-gts.us-south.mybluemix.net/eureka/
 eureka.instance.hostname=${vcap.application.application_uris[0]}
-
+eureka.instance.securePortEnabled=true
+eureka.instance.securePort=443
 
