--- a/book-recommend-service-bluemix.properties
+++ b/book-recommend-service-bluemix.properties
@@ -1,4 +1,4 @@
-message = Hello Tom
+message = Hello USA
 management.security.enabled=false
 eureka.client.serviceUrl.defaultZone=https://cdi-eureka-server.ibm-gts.us-south.mybluemix.net/eureka/
 eureka.instance.hostname=${vcap.application.application_uris[0]}
