--- a/book-recommend-service-local.properties
+++ b/book-recommend-service-local.properties
@@ -1,3 +1,4 @@
+server.port=8092
 message = Hello Jerry
 management.security.enabled=false
 eureka.client.serviceUrl.defaultZone=http://9.186.50.36:8761/eureka/
